--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
                 <div class="mySlides fade">
                   <!-- <div class="numbertext">1 / 3</div> -->
                   <img class="webApp" src="./images/Db1.jpg" style="width:100%">
-                  <img class="mobileApp" src="./images/Db1mob.jpg" style="min-width:100%">
+                  <img class="mobileApp" src="./images/Db1mob.jpg" style="width:100%">
 
                   <!-- <div class="text">Caption Text</div> -->
                 </div>
@@ -39,7 +39,7 @@
                 <div class="mySlides fade">
                   <!-- <div class="numbertext">2 / 3</div> -->
                   <img  class="webApp" src="./images/Db2.jpg" style="width:100%">
-                  <img class="mobileApp" src="./images/Db2mob.jpg" style="min-width:100%">
+                  <img class="mobileApp" src="./images/Db2mob.jpg" style="width:100%">
 
                                     <!-- <div class="text">Caption Two</div> -->
                 </div>
@@ -65,12 +65,12 @@
                 </select>
             </div>
             <div class="paddingLeft2">
-              <select id="selectSector" aria-placeholder="NIELIT Course">
+              <select id="selectCourse" aria-placeholder="NIELIT Course">
                   <option value="" disabled selected hidden>NILET Course</option>
               </select>
           </div>
           <div class="paddingLeft2">
-            <select id="selectSector" aria-placeholder="Win Job/Tech Assesment">
+            <select id="selectJob" aria-placeholder="Win Job/Tech Assesment">
                 <option value="" disabled selected hidden>Win Job/Tech Assesment</option>
             </select>
         </div>
@@ -84,7 +84,7 @@
             </div>
         </div>
 <br />
-        <div class="" style="margin-left: 40%;">
+        <div class="searchCourse">
           <div class="group"> 
              <svg class="icon" aria-hidden="true" viewBox="0 0 24 24">
                 <g>
@@ -101,7 +101,7 @@
 
       <section class="bottomNav">
         <nav>
-            <img src="./images/logo.svg">
+            <img src="./images/logo.svg" width="100%" style="max-width: 150px;">
         <ul>
             <li></li>
             <li><a href="#home">NIELIT Home</a></li>
@@ -109,7 +109,7 @@
             <li><a href="#contact">WIN Assessments Catalogue</a></li>
             <li><a href="#about">WIN LOGIN</a></li>
           </ul>
-          <img src="./images/Career.svg">
+          <img src="./images/Career.png" width="100%" style="max-width: 150px;">
         </nav>
     </section>
 
