added all changes except menu change

--- a/public/index.html
+++ b/public/index.html
@@ -100,9 +100,15 @@
       </section>
 
       <section class="bottomNav">
-        <nav>
+        <div class="btNavMob">
+          <div class="btNavMobFl">
+          <img src="./images/logo.svg" width="100%" style="max-width: 200px;">
+          <img src="./images/Career.png" width="100%" style="max-width: 150px;">
+        </div>
+      </div>
+        <nav class="bottomNavUl">
             <img src="./images/logo.svg" width="100%" style="max-width: 150px;">
-        <ul>
+        <ul class="bottomNavUl">
             <li></li>
             <li><a href="#home">NIELIT Home</a></li>
             <li><a href="#news">Win Home</a></li>
@@ -146,7 +152,7 @@
               </div> -->
           </div>
           <div class="modalBG1" class="paddingLeft2" id="inputPlaceholder">
-            <img src="./images/LoginImg.svg" >
+            <img  class="logImg" src="./images/LoginImg.svg" >
          <div id="register">
             <div class="modalBG2" id="registerUser">
             <input type="text" placeholder="NIELIT ID *" id="nielitid"/>
