--- a/public/dumm.html
+++ b/public/dumm.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <img src="./images/logo.svg" style="max-width: 150px;">
+            <img src="./images/logo.svg" width="100%" style="max-width: 150px;">
             <!-- <div></div> -->
         <ul>
             <li><a href="#home">NIELIT Home</a></li>
@@ -24,16 +24,16 @@
         </header>
 
 
-        <div id="myModal" class="" style="padding: 8% 0% 4% 0%; ">
+        <div id="myModal" class="modPad" >
             <!-- Modal content -->
             <div class="modal-content" style="border: none;">
               <!-- <span class="close" id="close">&times;</span> -->
               <div class="modalBG" >
-                <div class="paddingLeft2"><img src="./images//winLogo.svg" ></div>
+                <div class="paddingLeft2 winLogMob"><img src="./images//winLogo.svg"></div>
                 <div class="regHdr"><h2 id="regHdrh4">Register here to enroll into courses</h2></div>
               </div>
               <div class="modalBG1" class="paddingLeft2" id="inputPlaceholder">
-                <img src="./images/LoginImg.svg" >
+                <img  class="logImg" src="./images/LoginImg.svg" >
              <div id="register">
                 <div class="modalBG2" id="registerUser">
                 <input type="text" placeholder="NIELIT ID *" id="nielitid"/>
