--- a/public/dumm.html
+++ b/public/dumm.html
@@ -7,13 +7,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+
     <header>
-        <nav>
+        <nav class="navHdr">
             <img src="./images/logo.svg" width="100%" style="max-width: 150px;">
-            <!-- <div></div> -->
-        <ul>
+        <ul class="menu">
             <li><a href="#home">NIELIT Home</a></li>
             <li><a href="#news">Win Home</a></li>
             <li><a href="./index.html">WIN Assessments Catalogue</a></li>
