--- a/public/index.html
+++ b/public/index.html
@@ -10,18 +10,23 @@
 </head>
 <body>
     <header>
-        <nav>
-            <!-- <img src="./images/logo.svg"> -->
-            <div></div>
-        <ul>
-            <li><a href="#home">NIELIT Home</a></li>
-            <li><a href="#news">Win Home</a></li>
-            <li><a href="#contact">WIN Assessments Catalogue</a></li>
-            <li><a href="./dumm.html">WIN LOGIN</a></li>
-          </ul>
-          <!-- <img src="./images/Career.svg"> -->
-        </nav>
-        </header>
+    <nav>
+      <!-- Hamburger Menu Icon -->
+      <div class="menu-icon" onclick="toggleMenu()">
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+      </div>
+
+      <!-- Navigation Links -->
+      <ul class="nav-links">
+        <li><a href="#home">NIELIT Home</a></li>
+        <li><a href="#contact">WIN Assessments Catalogue</a></li>
+        <li><a href="#news">Win Home</a></li>
+        <li><a href="./dumm.html">WIN LOGIN</a></li>
+      </ul>
+    </nav>
+  </header>
 
 
         
