web and mobile changes navbar

--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,8 @@
       <ul class="nav-links">
         <li><a href="#home">NIELIT Home</a></li>
         <li><a href="#contact">WIN Assessments Catalogue</a></li>
-        <li><a href="#news">Win Home</a></li>
-        <li><a href="./dumm.html">WIN LOGIN</a></li>
+        <li><a href="/">Win Home</a></li>
+        <li><a href="./login.html">WIN LOGIN</a></li>
       </ul>
     </nav>
   </header>
@@ -130,10 +130,12 @@
       <div class="modal-content">
         <span class="close" id="close1">&times;</span>
         <div class="enroll imx" id="enroll">
-          <img src="./images/enroll.jpg" style="max-height: 600px;" />
+          <img src="./images/enroll.jpg" class="imgWeb" style="max-height: 600px;" />
+          <!-- <img src="./images/enrollmob.jpg" class="imgMob" style="max-height: 600px;" /> -->
         </div>
         <div class="wdug imx" id="wdug">
-          <img src="./images/wdug.jpg" style="max-height: 600px;" />
+          <img src="./images/wdug.jpg" class="imgWeb" style="max-height: 600px;" />
+          <img src="./images/wdugmob.jpg" class="imgMob" style="max-height: 600px;" />
         </div>
       </div>
     </div>
