--- a/public/login.html
+++ b/public/login.html
@@ -13,14 +13,24 @@
 
     <header>
         <nav class="navHdr">
-            <img src="./images/logo.svg" width="100%" style="max-width: 150px;">
-        <ul class="menu">
-            <li><a href="#home">NIELIT Home</a></li>
-            <li><a href="#news">Win Home</a></li>
-            <li><a href="./index.html">WIN Assessments Catalogue</a></li>
-            <li><a href="./dumm.html">WIN LOGIN</a></li>
-          </ul>
-          <img src="./images/Career.png" width="100%" style="max-width: 150px;">
+            <img src="./images/logo.svg" width="100%" style="max-width: 120px;">
+            <!-- <div> -->
+              <div class="menu-icon" onclick="toggleMenu()">
+                <div class="bar"></div>
+                <div class="bar"></div>
+                <div class="bar"></div>
+              </div>
+        
+              <!-- Navigation Links -->
+              <ul class="nav-links">
+                <li><a href="#home">NIELIT Home</a></li>
+                <li><a href="#contact">WIN Assessments Catalogue</a></li>
+                <li><a href="./index.html">Win Home</a></li>
+                <li><a href="/">WIN LOGIN</a></li>
+              </ul>
+            <!-- </div> -->
+           
+          <img src="./images/Career.png" width="100%" style="max-width: 120px;">
         </nav>
         </header>
 
