--- a/public/index.html
+++ b/public/index.html
@@ -118,8 +118,8 @@
             <li></li>
             <li><a href="#home">NIELIT Home</a></li>
             <li><a href="#news">Win Home</a></li>
-            <li><a href="#contact">WIN Assessments Catalogue</a></li>
-            <li><a href="#about">WIN LOGIN</a></li>
+            <li><a href="./">WIN Assessments Catalogue</a></li>
+            <li><a href="./login.html">WIN LOGIN</a></li>
           </ul>
           <img src="./images/Career.png" width="100%" style="max-width: 150px;">
         </nav>
