Added navbar changes

--- a/public/index.html
+++ b/public/index.html
@@ -131,7 +131,7 @@
         <span class="close" id="close1">&times;</span>
         <div class="enroll imx" id="enroll">
           <img src="./images/enroll.jpg" class="imgWeb" style="max-height: 600px;" />
-          <!-- <img src="./images/enrollmob.jpg" class="imgMob" style="max-height: 600px;" /> -->
+          <img src="./images/enrollmob.jpg" class="imgMob" style="max-height: 600px;" />
         </div>
         <div class="wdug imx" id="wdug">
           <img src="./images/wdug.jpg" class="imgWeb" style="max-height: 600px;" />
