--- a/public/index.html
+++ b/public/index.html
@@ -102,6 +102,7 @@
       </div> 
         <br />
         <div class="cardGrid" id="cardGrid">
+          <div class="card"><img class="courseImage" src="https://media.istockphoto.com/id/1366428092/photo/webinar-e-learning-skills-business-internet-technology-concepts-training-webinar-e-learning.webp?b=1&amp;s=170667a&amp;w=0&amp;k=20&amp;c=qjK4h0qt4W_NNG8TmboGw8RDRv8TNzEoFM_JEDZ1Ah0="><div class="paddingLeft5 wordBreak paddingBottom4"><h3 style="margin-bottom : 5px">Digital</h3><div><img src="./images/star.svg"><img src="./images/star.svg"><img src="./images/star.svg"><img src="./images/star.svg"><img src="./images/emptystar.svg"></div><div style="margin-bottom : 0px; margin-top : 10px" class="fontSmall secondaryFont">Duration - 60 Minutes</div><div style="margin-bottom : 10px; margin-top : 4px">Cost INR 999</div><button class="primaryButton">Enroll</button></div></div>
         </div>
       </section>
 
