--- a/public/login.html
+++ b/public/login.html
@@ -17,8 +17,8 @@
   <ul class="bottomNavUl">
       <li></li>
       <li><a href="#home">NIELIT Home</a></li>
-      <li><a href="#news">Win Home</a></li>
-      <li><a href="./">WIN Assessments Catalogue</a></li>
+      <!-- <li><a href="#news">Win Home</a></li> -->
+      <li><a href="./">Catalogue</a></li>
       <li><a href="./login.html">WIN LOGIN</a></li>
     </ul>
     <img src="./images/Career.png" width="100%" style="max-width: 150px;">
@@ -36,8 +36,8 @@
                      
               <ul class="nav-links">
                 <li><a href="#home">NIELIT Home</a></li>
-                <li><a href="#contact">WIN Assessments Catalogue</a></li>
-                <li><a href="./index.html">Win Home</a></li>
+                <li><a href="./index.html">Catalogue</a></li>
+                <!-- <li><a href="./index.html">Win Home</a></li> -->
                 <li><a href="/">WIN LOGIN</a></li>
               </ul>           
           <img src="./images/Career.png" width="100%" style="max-width: 120px;">
@@ -57,9 +57,10 @@
                 <img  class="logImg" src="./images/LoginImg.svg" >
              <div id="register">
                 <div class="modalBG2" id="registerUser">
-                <input type="text" placeholder="NIELIT ID *" id="nielitid"/>
-                <input type="email" placeholder="Email ID*" id="registeremail" />
-                <input type="password" placeholder="Password*" id="registerpassword"/>
+                  <input type="text" placeholder="Institution ID*" id="nielitid"/>
+                  <input type="text" placeholder="Name*" id="registername" />
+                  <input type="email" placeholder="Email ID*" id="registeremail" />
+                  <input type="text" placeholder="Phone no*" id="registerphoneno"/>
                 <button class="primaryButtonLong" onclick="handleRegisterSubmit()" id="registerbtn">Register</button>
                 <div class="loader"id="loader"style="margin-left: 35%;display:none"></div>
                 <p class="errorText" id="errorTextR"></p>
