--- a/public/login.html
+++ b/public/login.html
@@ -16,10 +16,10 @@
       <img src="./images/logo.svg" width="100%" style="max-width: 150px;">
   <ul class="bottomNavUl">
       <li></li>
-      <li><a href="#home">NIELIT Home</a></li>
+      <!-- <li><a href="#home">NIELIT Home</a></li> -->
       <!-- <li><a href="#news">Win Home</a></li> -->
       <li><a href="./">Catalogue</a></li>
-      <li><a href="./login.html">WIN LOGIN</a></li>
+      <li><a href="./login.html">LOGIN</a></li>
     </ul>
     <img src="./images/Career.png" width="100%" style="max-width: 150px;">
   </nav>
@@ -35,10 +35,10 @@
               </div>
                      
               <ul class="nav-links">
-                <li><a href="#home">NIELIT Home</a></li>
+                <!-- <li><a href="#home">NIELIT Home</a></li> -->
                 <li><a href="./index.html">Catalogue</a></li>
                 <!-- <li><a href="./index.html">Win Home</a></li> -->
-                <li><a href="/">WIN LOGIN</a></li>
+                <li><a href="/">LOGIN</a></li>
               </ul>           
           <img src="./images/Career.png" width="100%" style="max-width: 120px;">
         </nav>
@@ -55,13 +55,14 @@
               </div>
               <div class="modalBG1" class="paddingLeft2" id="inputPlaceholder">
                 <img  class="logImg" src="./images/LoginImg.svg" >
-             <div id="register">
+             <div id="register" class="textCenter">
                 <div class="modalBG2" id="registerUser">
                   <input type="text" placeholder="Institution ID*" id="nielitid"/>
                   <input type="text" placeholder="Name*" id="registername" />
                   <input type="email" placeholder="Email ID*" id="registeremail" />
                   <input type="text" placeholder="Phone no*" id="registerphoneno"/>
                 <button class="primaryButtonLong" onclick="handleRegisterSubmit()" id="registerbtn">Register</button>
+                <span style="font-size: x-small;">By signing up, you agree to our <a target="_blank" class="ud-link-neutral ud-link-underline" href="/terms/" rel="noopener noreferrer">Terms of Use</a> and <a target="_blank" class="ud-link-neutral ud-link-underline" href="/terms/privacy/" rel="noopener noreferrer">Privacy Policy</a>.</span>
                 <div class="loader"id="loader"style="margin-left: 35%;display:none"></div>
                 <p class="errorText" id="errorTextR"></p>
                 </div>
