--- a/public/index.html
+++ b/public/index.html
@@ -20,10 +20,10 @@
 
       <!-- Navigation Links -->
       <ul class="nav-links">
-        <li><a href="#home">NIELIT Home</a></li>
+        <!-- <li><a href="#home">NIELIT Home</a></li> -->
         <li><a href="#contact"> Catalogue</a></li>
         <!-- <li><a href="/">Win Home</a></li> -->
-        <li><a href="./login.html">WIN LOGIN</a></li>
+        <li><a href="./login.html">LOGIN</a></li>
       </ul>
     </nav>
   </header>
@@ -67,12 +67,12 @@
         <div class="flexer">
             <div class="paddingLeft2">
                 <select id="selectSector" aria-placeholder="Sector">
-                    <option value="" disabled selected hidden>Sector</option>
+                    <option value="" disabled selected hidden>Course</option>
                 </select>
             </div>
             <div class="paddingLeft2">
               <select id="selectCourse" aria-placeholder="Course">
-                  <option value="" disabled selected hidden>Course</option>
+                  <option value="" disabled selected hidden>Institution</option>
               </select>
           </div>
           <div class="paddingLeft2">
@@ -103,7 +103,6 @@
       </div> 
         <br />
         <div class="cardGrid" id="cardGrid">
-          <div class="card"><img class="courseImage" src="https://media.istockphoto.com/id/1366428092/photo/webinar-e-learning-skills-business-internet-technology-concepts-training-webinar-e-learning.webp?b=1&amp;s=170667a&amp;w=0&amp;k=20&amp;c=qjK4h0qt4W_NNG8TmboGw8RDRv8TNzEoFM_JEDZ1Ah0="><div class="paddingLeft5 wordBreak paddingBottom4"><h3 style="margin-bottom : 5px">Digital</h3><div><img src="./images/star.svg"><img src="./images/star.svg"><img src="./images/star.svg"><img src="./images/star.svg"><img src="./images/emptystar.svg"></div><div style="margin-bottom : 0px; margin-top : 10px" class="fontSmall secondaryFont">Duration - 60 Minutes</div><div style="margin-bottom : 10px; margin-top : 4px">Cost INR 999</div><button class="primaryButton">Enroll</button></div></div>
         </div>
       </section>
 
@@ -118,10 +117,10 @@
             <img src="./images/logo.svg" width="100%" style="max-width: 150px;">
         <ul class="bottomNavUl">
             <li></li>
-            <li><a href="#home">NIELIT Home</a></li>
+            <!-- <li><a href="#home">NIELIT Home</a></li> -->
             <!-- <li><a href="#news">Win Home</a></li> -->
             <li><a href="./">Catalogue</a></li>
-            <li><a href="./login.html">WIN LOGIN</a></li>
+            <li><a href="./login.html">LOGIN</a></li>
           </ul>
           <img src="./images/Career.png" width="100%" style="max-width: 150px;">
         </nav>
@@ -163,13 +162,14 @@
           </div>
           <div class="modalBG1" class="paddingLeft2" id="inputPlaceholder">
             <img  class="logImg" src="./images/LoginImg.svg" >
-         <div id="register">
+         <div id="register" class="textCenter">
             <div class="modalBG2" id="registerUser">
             <input type="text" placeholder="Institution ID*" id="nielitid"/>
             <input type="text" placeholder="Name*" id="registername" />
             <input type="email" placeholder="Email ID*" id="registeremail" />
             <input type="text" placeholder="Phone no*" id="registerphoneno"/>
             <button class="primaryButtonLong" onclick="handleRegisterSubmit()" id="registerbtn">Register</button>
+            <span style="font-size: x-small;">By signing up, you agree to our <a target="_blank" class="ud-link-neutral ud-link-underline" href="/terms/" rel="noopener noreferrer">Terms of Use</a> and <a target="_blank" class="ud-link-neutral ud-link-underline" href="/terms/privacy/" rel="noopener noreferrer">Privacy Policy</a>.</span>
             <div class="loader"id="loader"style="margin-left: 35%;display:none"></div>
             <p class="errorText" id="errorTextR"></p>
             </div>
