--- a/public/login.html
+++ b/public/login.html
@@ -50,7 +50,7 @@
             <div class="modal-content" style="border: none;">
               <!-- <span class="close" id="close">&times;</span> -->
               <div class="modalBG" >
-                <div class="paddingLeft2 winLogMob"><img src="./images//winLogo.svg"></div>
+                <div class="paddingLeft2 winLogMob"><img src="./images/winLogo.svg"></div>
                 <div class="regHdr"><h2 id="regHdrh4">Register here to enroll into courses</h2></div>
               </div>
               <div class="modalBG1" class="paddingLeft2" id="inputPlaceholder">
